--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -33,126 +33,135 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- Content -->
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <!-- When device is available -->
+        <LinearLayout
+            android:animateLayoutChanges="true"
+            android:paddingBottom="32dp"
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            tools:visibility="visible"
+            android:clipToPadding="false"
+            android:clipChildren="false">
 
-            <!-- When device is available -->
-            <LinearLayout
-                android:paddingBottom="32dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:orientation="vertical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:visibility="@{vm.isDeviceAvailable ? View.VISIBLE : View.GONE}"
-                tools:visibility="visible"
-                android:clipToPadding="false"
-                android:clipChildren="false">
+            <!-- Connect suggestion section -->
+            <androidx.cardview.widget.CardView
+                style="@style/SectionCard"
+                android:id="@+id/connect_suggestion_section"
+                android:visibility="@{!vm.deviceComplete ? View.VISIBLE : View.GONE}">
 
-                <!-- Foot view section -->
-                <androidx.cardview.widget.CardView
-                    style="@style/SectionCard"
-                    android:id="@+id/foot_section">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <LinearLayout
+                    <!-- Title -->
+                    <TextView
+                        style="@style/SectionHeader"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/title_connect_device" />
+
+                    <!-- Body -->
+                    <TextView
+                        android:id="@+id/no_device_text"
+                        style="@style/TextSecondary"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:text="@string/text_please_connect_device"/>
+
+                    <!-- Connect button -->
+                    <Button
+                        style="@style/BigButton"
+                        android:id="@+id/connect_device_button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical">
+                        app:layout_constraintTop_toBottomOf="@id/no_device_text"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        android:text="@string/button_connect_device"/>
 
-                        <!-- Title -->
-                        <TextView
-                            style="@style/SectionHeader"
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <!-- Foot view section -->
+            <androidx.cardview.widget.CardView
+                style="@style/SectionCard"
+                android:id="@+id/foot_section"
+                android:visibility="@{vm.deviceAvailable ? View.VISIBLE : View.GONE}">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <!-- Title -->
+                    <TextView
+                        style="@style/SectionHeader"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/text_realtime" />
+
+                    <!-- Pressure view -->
+                    <LinearLayout
+                        android:layout_gravity="center_horizontal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <!-- Left foot -->
+                        <org.wbpbp.preshoes.common.widget.FootPressureView
+                            android:id="@+id/pressure_view_left"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/text_realtime" />
+                            app:available="@{vm.leftDeviceAvailable}"
+                            app:side="left" />
 
-                        <!-- Pressure view -->
-                        <LinearLayout
-                            android:layout_gravity="center_horizontal"
+                        <!-- Right foot -->
+                        <org.wbpbp.preshoes.common.widget.FootPressureView
+                            android:id="@+id/pressure_view_right"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <!-- Left foot -->
-                            <org.wbpbp.preshoes.common.widget.FootPressureView
-                                android:id="@+id/pressure_view_left"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:side="left" />
-
-                            <!-- Right foot -->
-                            <org.wbpbp.preshoes.common.widget.FootPressureView
-                                android:id="@+id/pressure_view_right"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                app:side="right" />
-
-                        </LinearLayout>
+                            app:available="@{vm.rightDeviceAvailable}"
+                            app:side="right" />
 
                     </LinearLayout>
 
-                </androidx.cardview.widget.CardView>
+                </LinearLayout>
 
-                <!-- Battery section -->
-                <androidx.cardview.widget.CardView
-                    style="@style/SectionCard"
-                    android:id="@+id/battery_section">
+            </androidx.cardview.widget.CardView>
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical">
+            <!-- Battery section -->
+            <androidx.cardview.widget.CardView
+                style="@style/SectionCard"
+                android:id="@+id/battery_section"
+                android:visibility="@{vm.deviceAvailable ? View.VISIBLE : View.GONE}">
 
-                        <!-- Section name -->
-                        <TextView
-                            style="@style/SectionHeader"
-                            android:text="@string/text_battery" />
-
-                        <!-- Battery view -->
-                        <include
-                            layout="@layout/battery_view"
-                            app:vm="@{vm}"/>
-
-                    </LinearLayout>
-
-                </androidx.cardview.widget.CardView>
-
-            </LinearLayout>
-
-            <!-- When device is not available -->
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="@{vm.isDeviceAvailable ? View.GONE : View.VISIBLE}"
-                tools:visibility="gone">
-
-                <TextView
-                    android:id="@+id/no_device_text"
-                    style="@style/TextBig"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:text="@string/text_no_device_connected"/>
+                    android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/connect_device_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintTop_toBottomOf="@id/no_device_text"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:text="@string/button_connect_device"/>
+                    <!-- Section name -->
+                    <TextView
+                        style="@style/SectionHeader"
+                        android:text="@string/text_battery" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                    <!-- Battery view -->
+                    <include
+                        layout="@layout/battery_view"
+                        app:vm="@{vm}"/>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
 
     </ScrollView>
 </layout>
