--- a/app/src/main/res/layout/battery_view.xml
+++ b/app/src/main/res/layout/battery_view.xml
@@ -78,7 +78,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/battery_meter_left"
-                android:text="@{vm.leftBatteryLevel.toString() + '%'}"
+                android:text="@{vm.leftBatteryLevelText}"
                 tools:text="37%"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -125,7 +125,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/battery_meter_right"
-                android:text="@{vm.rightBatteryLevel.toString() + '%'}"
+                android:text="@{vm.rightBatteryLevelText}"
                 tools:text="64%"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
