--- a/app/src/main/res/drawable/circular_progress_bar.xml
+++ b/app/src/main/res/drawable/circular_progress_bar.xml
@@ -18,31 +18,23 @@
   ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<rotate
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:fromDegrees="270"
+    android:toDegrees="270">
 
-    <data>
-        <variable
-            name="vm"
-            type="org.wbpbp.preshoes.feature.diagnose.DiagnoseViewModel" />
-    </data>
+    <shape
+        android:innerRadiusRatio="2.5"
+        android:shape="ring"
+        android:thickness="5dp"
+        android:useLevel="true"><!-- this line fixes the issue for lollipop api 21 -->
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        <gradient
+            android:angle="0"
+            android:endColor="@color/colorPrimary"
+            android:startColor="@color/colorPrimary"
+            android:type="sweep"
+            android:useLevel="false" />
+    </shape>
 
-        <LinearLayout
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <include
-                layout="@layout/unified_diagnosis_section"
-                app:vm="@{vm}" />
-
-        </LinearLayout>
-
-    </ScrollView>
-</layout>
-
+</rotate>
