--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -23,7 +23,7 @@
     <style name="AppTheme" parent="AppBaseThemeDark" />
 
     <!-- Light theme -->
-    <style name="AppBaseThemeDark" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="AppBaseThemeDark" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/backgroundLittleDark</item>
         <item name="android:windowLightStatusBar">false</item>
         <item name="android:windowLightNavigationBar">false</item>
