--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -24,7 +24,7 @@
     <style name="AppTheme" parent="AppBaseThemeLight" />
 
     <!-- Light theme -->
-    <style name="AppBaseThemeLight" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="AppBaseThemeLight" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/backgroundLight</item>
         <item name="android:windowLightStatusBar">true</item>
         <item name="android:windowLightNavigationBar">true</item>
