Diagnosis layout done.

--- a/app/src/main/res/layout/unified_diagnosis_fragment.xml
+++ b/app/src/main/res/layout/unified_diagnosis_fragment.xml
@@ -33,19 +33,39 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <!-- Phase view -->
         <com.shuhart.stepview.StepView
+            android:id="@+id/diagnosis_phase_view"
+            android:padding="16dp"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="36dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
 
-            app:sv_animationType="All"
-            app:sv_stepPadding="12dp"
-            app:sv_stepsNumber="5"
+            app:sv_steps="@array/unified_diagnosis_steps"
 
-            />
+            app:sv_doneCircleColor="?android:attr/colorAccent"
+            app:sv_doneStepLineColor="?android:attr/colorAccent"
+            app:sv_doneTextColor="?android:attr/textColorPrimary"
+            app:sv_doneCircleRadius="12dp"
+
+            app:sv_selectedCircleColor="?android:attr/colorAccent"
+            app:sv_selectedTextColor="?android:attr/colorAccent"
+            app:sv_selectedCircleRadius="12dp"
+            app:sv_selectedStepNumberColor="?android:attr/textColorPrimary"
+
+            app:sv_nextStepLineColor="?android:attr/colorAccent"
+            app:sv_nextTextColor="?android:attr/textColorPrimary"
+
+            app:sv_stepViewStyle="@style/StepView"
+            app:sv_doneStepMarkColor="?android:attr/colorAccent"
+            app:sv_stepNumberTextSize="16sp"
+            app:sv_textSize="16sp"
+            app:sv_animationType="Line" />
 
         <!-- Center foot pressure and button view -->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -73,7 +93,8 @@
                 android:layout_width="115dp"
                 android:layout_height="115dp"
                 android:textColor="?android:attr/textColorPrimary"
-                android:text="Hello!"
+                android:textSize="22sp"
+                android:text="시작"
                 android:background="?selectableItemBackgroundBorderless"
                 app:layout_constraintStart_toStartOf="@id/progress_ring"
                 app:layout_constraintEnd_toEndOf="@id/progress_ring"
@@ -95,7 +116,7 @@
                 app:layout_constraintVertical_bias="0.8"
                 android:max="@{vm.progressMax}"
                 android:progress="@{vm.progress}"
-                tools:progress="63"/>
+                tools:progress="100"/>
 
             <!-- Right -->
             <org.wbpbp.preshoes.common.widget.FootPressureView
@@ -109,6 +130,19 @@
                 app:side="right" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <TextView
+            android:layout_marginTop="48dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginEnd="24dp"
+            style="@style/TextPrimary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/center_view"
+            android:text="두 발로 바르게 선 뒤 시작 버튼을 눌러 주세요." />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
