--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -30,6 +30,7 @@
     </string-array>
 
     <string-array name="unified_diagnosis_steps">
+        <item>준비</item>
         <item>정적 검사</item>
         <item>걷기</item>
     </string-array>
